Fixed bug with CSS overflow
Overflow was affecting input boxes as well as textareas

--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -44,6 +44,20 @@
 	font-weight:bold;
 	font-size:16px;
 	width:500px !important;
+}
+
+.textareaFix{
+	border:2px solid #b4b4b4;
+    border-radius:10px;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+	box-shadow:inset 1px 2px 4px #cdcdcd;
+	-moz-box-shadow:inset 1px 1px 4px #cdcdcd;
+	-webkit-box-shadow:inset 1px 1px 4px #cdcdcd;
+    padding:5px;
+	font-weight:bold;
+	font-size:16px;
+	width:500px !important;
 	overflow:scroll;
 }
 
